# dss-irrigation

./: .gitignore  README.md  pyproject.toml
anfis/: README.md  main.py
anfis/anfis_pytorch/logs/runs/2025_03_25_032204-S4_N4_R81/: events.out.tfevents.1742869324.DESKTOP-IPJRJCF.16988.0
anfis/anfis_pytorch/logs/runs/2025_03_25_032204-S4_N4_R81/1742869335.6077461/: events.out.tfevents.1742869335.DESKTOP-IPJRJCF.16988.1
anfis/data/: val_data.xlsx
data/: boost_val_data.csv  clean_data_rovere.csv  devices.csv  dss_data_rovere.csv  dss_rules.xlsx  meteo_stations.csv  rules_to_train_data.ipynb  survey_to_val_data.ipynb  train_data.xlsx  val_data.csv  val_data.xlsx  weather_stations.csv
mamdani/demo/: .cache.sqlite
notebooks/: Untitled.ipynb  anfis_prova.ipynb  application.ipynb  demo.ipynb  dss1_expert.ipynb  dss2_skfuzzy.ipynb  dss_validation.ipynb  interactive_results.ipynb  keycloak.ipynb  main2.ipynb  main_2_jupyter.ipynb  survey.ipynb  synthetic_data.csv  test_sanfis.ipynb
presentations/powerpoint/: ARIMAX.pptx  How_to_Run.pptx
scripts/: boost_validation.py  dss_model_train.py  foto.py  grafici.py  main.py  main_2.py  ml_models.py  plotly_kaleido.py  prova_modelli.py
src/dss_irrigation/anfis/: helpers.py  model_dss.pkl  sanfis.py  sanfis_dss_model.pth
src/dss_irrigation/mamdani/: dss_package.py  model_dss2.pkl
