[project]
name = "dss-irrigation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ctgan>=0.11.1",
    "deap>=1.4.3",
    "fuzzy-expert>=0.1.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openmeteo-requests>=1.7.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "requests-cache>=1.3.0",
    "retry-requests>=2.0.0",
    "sanfis>=0.1.0",
    "scikit-fuzzy>=0.5.0",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "xgboost>=3.1.3",
]
